crates/compiler/tests/parse_errors/let_in.txt
-- LET PROBLEM ---------------------------------------------------- src/Main.elm

I was partway through parsing a `let` expression, but I got stuck here:

4|     let a = 1
5|     a
       ^
Based on the indentation, I was expecting to see the in keyword next. Is there a
typo?

Note: This can also happen if you are trying to define another value within the
`let` but it is not indented enough. Make sure each definition has exactly the
same amount of spaces before it. They should line up exactly!

